20150823若干问题修改
1、登录添加loade
2、启动Splash界面去掉v1.0
3、添加好友放右上角
4、活动详细不能向下滚动
5、活动里面的\n问题处理
6、活动列表文字缩到一行

--- a/im/res/values-zh-rCN/strings.xml
+++ b/im/res/values-zh-rCN/strings.xml
@@ -19,6 +19,8 @@
     <string name="login_failed">您的用户名称必须是大小写的英文字母</string>
     <string name="login_username">用户名称</string>
     <string name="login_pwd">密码</string>
+    <string name="login_sign_in_message">正在登录...</string>
+    <string name="login_sign_up_message">正在注册...</string>
 
     <!-- Friend -->
     <string name="friend_topic_list">群组列表</string>
@@ -110,6 +112,7 @@
     <string name="event_no_internet">无网络连接</string>
     <string name="event_apply_successful">报名成功</string>
     <string name="event_get_data_failed">获取活动数据失败</string>
+    <string name="event_apply_loader_message">正在报名...</string>
     
     <!-- Custom Dialog -->
     <string name="dialog_title">提示信息</string>
