朋友圈及活动若干问题修改
1.朋友圈“点赞”及“留言”按钮样式更换
2.朋友圈新建按钮移至右上角，原按钮隐藏
3.活动接口及详情界面调整
4.活动报名电话号码增加长度校验

--- a/im/res/values-zh-rCN/strings.xml
+++ b/im/res/values-zh-rCN/strings.xml
@@ -107,12 +107,14 @@
     <string name="event_unknown">不详</string>
     <string name="event_apply">报名</string>
     <string name="event_apply_me">我要报名</string>
-    <string name="event_input_mobile">请输入您的电话号码</string>
-    <string name="event_mobile_cannot_null">电话号码不能为空</string>
+    <string name="event_input_mobile">请输入您的手机号码</string>
+    <string name="event_mobile_cannot_null">手机号码不能为空</string>
     <string name="event_no_internet">无网络连接</string>
     <string name="event_apply_successful">报名成功</string>
     <string name="event_get_data_failed">获取活动数据失败</string>
     <string name="event_apply_loader_message">正在报名...</string>
+    <string name="event_money_free">免费</string>
+    <string name="event_mobile_check_error">手机号码格式错误！</string>
     
     <!-- Custom Dialog -->
     <string name="dialog_title">提示信息</string>
