--- a/im/res/values/strings.xml
+++ b/im/res/values/strings.xml
@@ -120,6 +120,8 @@
     <string name="event_apply_successful">Apply successful</string>
     <string name="event_get_data_failed">Get event data failed</string>
     <string name="event_apply_loader_message">Now applying</string>
+    <string name="event_money_free">Free</string>
+    <string name="event_mobile_check_error">mobile format error!</string>
     
     <!-- Custom Dialog -->
     <string name="dialog_title">Tips</string>
