--- a/im/res/values-zh-rTW/strings.xml
+++ b/im/res/values-zh-rTW/strings.xml
@@ -102,6 +102,7 @@
     <string name="wall_create_post">撰寫貼文…</string>
     <string name="wall_create_post_title">新增貼文</string>
     <string name="wall_comment_reply">回覆</string>
+    <string name="wall_post_loader">正在提交，請稍侯...</string>
 
     <!-- Event -->
     <string name="event_detail">活動詳情</string>
