--- a/im/res/values-zh-rCN/strings.xml
+++ b/im/res/values-zh-rCN/strings.xml
@@ -121,4 +121,10 @@
     <string name="dialog_title">提示信息</string>
     <string name="dialog_ok">确定</string>
     <string name="dialog_cancel">取消</string>
+    
+    <!-- ListView loader -->
+    <string name="loader_loading">正在玩命加载中...</string>
+    <string name="loader_error">数据加载错误...</string>
+    <string name="loader_try_again">重试</string>
+    <string name="loader_empty">暂无数据</string>
 </resources>
