--- a/im/res/values-zh-rCN/strings.xml
+++ b/im/res/values-zh-rCN/strings.xml
@@ -127,4 +127,7 @@
     <string name="loader_error">数据加载错误...</string>
     <string name="loader_try_again">重试</string>
     <string name="loader_empty">暂无数据</string>
+    
+    <!-- Create user -->
+    <string name="create_new_user_title">注册新用户</string>
 </resources>
