--- a/im/res/values-zh-rTW/strings.xml
+++ b/im/res/values-zh-rTW/strings.xml
@@ -130,4 +130,6 @@
     <string name="loader_try_again">重試</string>
     <string name="loader_empty">暫無數據</string>
     
+    <!-- Create user -->
+    <string name="create_new_user_title">註冊新用戶</string>   
 </resources>
