--- a/im/res/values/strings.xml
+++ b/im/res/values/strings.xml
@@ -134,4 +134,7 @@
     <string name="loader_error">Load error...</string>
     <string name="loader_try_again">Try agin</string>
     <string name="loader_empty">No items yet</string>
+    
+    <!-- Create user -->
+    <string name="create_new_user_title">Create new user</string>
 </resources>
